--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -3,13 +3,23 @@ name: CI – Build and Install Frontend
 on:
   push:
     branches: [main]
+    paths:
+      - 'frontend/**'
+      - '.github/workflows/frontend.yml'
   pull_request:
     branches: [main]
+    paths:
+      - 'frontend/**'
+      - '.github/workflows/frontend.yml'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     name: Install & Build Check
+
+    defaults:
+      run:
+        working-directory: ./frontend
 
     steps:
       - name: 📥 Checkout repository
@@ -19,9 +29,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
+          cache-dependency-path: './frontend/package-lock.json'
 
       - name: 📦 Install dependencies
         run: npm ci
+
+      - name: 🔍 Run linting
+        run: npm run lint
 
       - name: 🏗 Build project
         run: npm run build
