--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,5 +1,8 @@
 name: CI – Build and Install Frontend
 
+permissions:
+  contents: read
+
 on:
   push:
     branches: [main]
@@ -22,7 +25,7 @@ jobs:
         working-directory: ./frontend
 
     steps:
-      - name: 📥 Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: 🛠 Set up Node.js
@@ -32,8 +35,8 @@ jobs:
           cache: 'npm'
           cache-dependency-path: './frontend/package-lock.json'
 
-      - name: 📦 Install dependencies
+      - name: Install dependencies
         run: npm ci
 
-      - name: 🏗 Build project
+      - name: Build project
         run: npm run build
