--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@mui/material": "^7.1.2",
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.11.0",
     "framer-motion": "^12.19.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
