--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,9 @@
     "express-session": "^1.18.2",
     "helmet": "^8.1.0",
     "pg": "^8.16.3",
+    "pino": "^9.9.0",
     "pino-http": "^10.5.0",
+    "pino-pretty": "^13.1.1",
     "zod": "^4.0.17"
   },
   "overrides": {
