--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,8 +8,14 @@ CORS_ORIGIN=http://localhost:5173
 
 # Database URLs from Neon
 DATABASE_URL="postgresql://<user>:<password>@<pooled-host>/<db>?sslmode=require&pgbouncer=true&connect_timeout=10&connection_limit=1"
-
 PRISMA_MIGRATION_URL="postgresql://<user>:<password>@<direct-host>/<db>?sslmode=require&connect_timeout=10"
+
+# Test Database URLs from Neon (If you want to locally test backend) Tests clear database after they have completed!
+
+# testSetup.js-file utilizes these and they must be setup for local backend testing
+TEST_DATABASE_URL="postgresql://<user>:<password>@<pooled-host>/<db>?sslmode=require&pgbouncer=true&connect_timeout=10&connection_limit=1"
+TEST_PRISMA_MIGRATION_URL="postgresql://<user>:<password>@<direct-host>/<db>?sslmode=require&connect_timeout=10"
+
 
 # Session secret: a long random string (at least 32 characters)
 SESSION_SECRET="your_random_secret"
